# qrb

./: CMakeLists.txt  README.md  README.zh-CN.md
.github/workflows/: release.yml
include/qrb/: file.h  index.h  page.h  qr.h  qrb.h
src/: main.cpp
src/qrb/: file.cpp  index.cpp  page.cpp  qr.cpp  qrb.cpp
